# sample_kinematics

./: CMakeLists.txt  README.md  package.xml
src/: kinematics.cpp
