<?xml version="1.0"?>
<package>
  <name>sample_kinematics</name>
  <version>0.0.0</version>
  <description>The sample_kinematics package</description>

  <maintainer email="xavier@inegocis.com">Xavier Blasco</maintainer>

  <license>BSD</license>

   <url type="repository">https://github.com/xavierblasco/sample_kinematics.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
